--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -516,7 +516,7 @@
                 padding: 4px;
             }
             #storage-container {
-                margin: 0 0;
+                margin: 0 0 !important;
                 margin-right: 166px !important;
             }
 
