--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -736,7 +736,7 @@
             const result = await resp.json();
             if(resp.ok) {
                 alert(result.status);
-                fetchBackups();
+                location.reload();
             } else {
                 alert(`Deletion failed: ${result.error}`)
             }
