--- a/pythonanywhere/templates/home_dutch.html
+++ b/pythonanywhere/templates/home_dutch.html
@@ -1303,7 +1303,7 @@
                     <a href="#" class="feature-btn">Meer info <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
-            <div class="feature-card" data-feature="flow">
+            <!--<div class="feature-card" data-feature="flow">
                 <div class="feature-icon" style="background: linear-gradient(45deg, #4527a0, #00d4c7);">
                     <i class="fas fa-code-branch"></i>
                 </div>
@@ -1312,7 +1312,7 @@
                     <p>Volg de voortgang van je project met een uniek systeem geïnspireerd op Git, maar gericht op impactpunten in plaats van code. Maak branches aan, voeg werk samen en stel een totaal impactdoel in om te visualiseren wanneer je project klaar is. Perfect voor gezamenlijke planning en het bijhouden van mijlpalen.</p>
                     <a href="#" class="feature-btn">Meer info <i class="fas fa-arrow-right"></i></a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
